--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CloudDoc.styles.css" asp-append-version="true" />
+    <script src="https://cdn.tiny.cloud/1/50j9trec3awge8dioplbrjwwcyt436pfmaoaswq4y28jl04i/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>
+        tinymce.init({
+          selector: 'textarea#tiny',
+              plugins: [
+                'a11ychecker', 'accordion', 'advlist', 'anchor', 'autolink', 'autosave',
+                'charmap', 'code', 'codesample', 'directionality', 'emoticons', 'exportpdf',
+                'exportword', 'fullscreen', 'help', 'image', 'importcss', 'importword',
+                'insertdatetime', 'link', 'lists', 'markdown', 'math', 'media', 'nonbreaking',
+                'pagebreak', 'preview', 'quickbars', 'save', 'searchreplace', 'table',
+                'visualblocks', 'visualchars', 'wordcount'
+              ],
+              toolbar: 'undo redo | accordion accordionremove | ' +
+                'importword exportword exportpdf | math | ' +
+                'blocks fontfamily fontsize | bold italic underline strikethrough | ' +
+                'align numlist bullist | link image | table media | ' +
+                'lineheight outdent indent | forecolor backcolor removeformat | ' +
+                'charmap emoticons | code fullscreen preview | save print | ' +
+                'pagebreak anchor codesample | ltr rtl',
+              menubar: 'file edit view insert format tools table help'
+        })
+    </script>
 </head>
 <body>
     <header>
